# clinear

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.clinear/: memory.yaml
.github/workflows/: publish.yml
clinear/: __init__.py  __main__.py  auth.py  cli.py  cli_state.py  client.py  config.py  errors.py  filters.py  memory_board.py  output.py
clinear/commands/: __init__.py  auth_cmd.py  comment.py  cycle.py  init.py  issue.py  label.py  memory.py  project.py  raw.py  team.py  update.py
clinear/graphql/: __init__.py  fragments.py  mutations.py  queries.py
clinear/mcp/: __init__.py  content.py  prompts.py  resources.py  server.py
clinear/models/: __init__.py  base.py  cycle.py  enums.py  issue.py  label.py  project.py  team.py  user.py  workflow.py
clinear/skill_content/: commands.md  examples.md  filters.md  output-formats.md  overview.md  workflows.md
docs/: DESIGN.md
schema/: schema-summary.json
scripts/: e2e-test.sh  install-hooks.sh  pre-commit.sh  ship.sh
skills/: install.sh
skills/clinear/: SKILL.md
skills/clinear/references/: commands.md  examples.md  filters.md  output-formats.md  overview.md  workflows.md
tests/: test_account_resolution.py
