[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "clinear"
version = "0.2.0"
description = "Type-safe Linear CLI built on Pydantic v2"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Clover", email = "rnadales@cloverve.com" },
]
keywords = ["linear", "cli", "issue-tracker", "pydantic", "graphql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.10,<3.0",
    "httpx>=0.27,<1.0",
    "typer>=0.15,<1.0",
    "rich>=13.9,<15.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
]

[project.scripts]
clinear = "clinear.cli:app"

[project.urls]
Homepage = "https://github.com/Clover/clinear"
Documentation = "https://github.com/Clover/clinear/blob/main/docs/DESIGN.md"
Issues = "https://github.com/Clover/clinear/issues"

[tool.hatch.build.targets.wheel]
packages = ["clinear"]
artifacts = ["VERSION"]

[tool.hatch.build.targets.wheel.force-include]
"VERSION" = "VERSION"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
